--- a/index.html
+++ b/index.html
@@ -8,13 +8,85 @@
     <title>Document</title>
 </head>
 <body>
-    <main class="wrapper">
-        <h1>Pietro Victor</h1>
-        <h2>Front-end Developer</h2>
-        <div class="social-media">
-            <a href="https://www.linkedin.com/in/pietro-victor-2594691aa/">Linkedin</a>
-            <a href="https://github.com/pietroovictor">Github</a>
+    <header class="header-wrapper">
+        <div class="header">
+            <div class="checkbox-container">
+                <div class="checkbox-wrapper">
+                    <input type="checkbox" id="toggle">
+                    <label for="toggle" class="checkbox">
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                    </label>
+                    <div class="menu"></div>
+                    <nav class="menu-items">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Projetos</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <section class="home" id="home">
+            <div class="max-width">
+                <div class="home-content">
+                    <div class="text-1">Hello, my name is</div>
+                    <div class="text-2">Pietro Victor</div>
+                    <div class="text-3">I'm a <span>Front-End Developer</span></div>         
+                </div>
+            </div>
+            <div class="img-pietro">
+                <img src="pictures/logo/pietro.png" alt="">
+                <!-- <div class="social-media">
+                    <a href="#">Linkedin</a>
+                    <a href="#">Github</a>
+                </div> -->
+            </div>
+        </section>
+        <!-- <img src="" alt="">   imagem do The DEV-->
+    </header>
+    <main class="container">
+        <div class="card-container">
+            <div class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet ab autem ut blanditiis dignissimos possimus maiores, accusantium, sit deleniti, distinctio quia. Error sunt similique voluptate. Exercitationem minima similique voluptatem consequatur.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet ab autem ut blanditiis dignissimos possimus maiores, accusantium, sit deleniti, distinctio quia. Error sunt similique voluptate. Exercitationem minima similique voluptatem consequatur.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Github</h2>
+                    <p>veja meus projetos</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Linkedin</h2>
+                    <p>Visite meu perfil profissional</p>
+                </div>
+            </div>
+            <div class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet ab autem ut blanditiis dignissimos possimus maiores, accusantium, sit deleniti, distinctio quia. Error sunt similique voluptate. Exercitationem minima similique voluptatem consequatur.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet ab autem ut blanditiis dignissimos possimus maiores, accusantium, sit deleniti, distinctio quia. Error sunt similique voluptate. Exercitationem minima similique voluptatem consequatur.
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet ab autem ut blanditiis dignissimos possimus maiores, accusantium, sit deleniti, distinctio quia. Error sunt similique voluptate. Exercitationem minima similique voluptatem consequatur.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet ab autem ut blanditiis dignissimos possimus maiores, accusantium, sit deleniti, distinctio quia. Error sunt similique voluptate. Exercitationem minima similique voluptatem consequatur.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Instagram</h2>
+                    <p>Mais do meu dia a dia</p>
+                </div>
+            </div>
         </div>
     </main>
+    <footer class="footer">
+        Feito por Pietro Victor
+    </footer>
 </body>
 </html>
